frontend/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: llm-frontend
spec:
  rules:
    - host: derronli.com
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: llm-frontend
                port:
                  number: 80
